# SnakesSnake

./: CMakeLists.txt  main.cpp
Game/: Game.cpp
Tools/: Random.cpp
World/: Snake.cpp
